css/style.css
:root {
  --color-white: #fff;

  --color-primary-black: #000;
  --color-secondary-black: #1c1c1c;

  --color-red: #ff2929;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  font-size: 62.5%;
}

body {
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
  line-height: 1.7;
}

/* Navigation */
.nav {
  height: 9rem;
  width: 100%;
  background-color: var(--color-primary-black);
  display: flex;
  justify-content: flex-end;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100;
}

.nav__logo-box {
  background-color: #ff2e2e; /* Similar red color */
  width: 150px;
  height: 210px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  border-radius: 2px;
  padding: 1rem;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  position: absolute;
  left: 8rem;
  /* z-index: 2; */
}

.nav__logo-img {
  width: 120px;
  height: auto;
  margin-top: 55px;
}

.nav__logo-title {
  line-height: 1;
  font-size: 1.4rem;
  font-weight: 600;
  margin: 0;
}

.nav__logo-subtitle {
  font-size: 1.2rem;
  font-weight: 300;
  margin: 0;
}

.nav__links--ul {
  list-style: none;
  display: flex;
  align-items: center;
}

.nav__items {
  margin-left: 5rem;
}

.nav__link {
  color: var(--color-white);
  text-decoration: none;
  font-weight: 400;
  font-size: 1.7rem;
  cursor: pointer;
  transition: all 0.3s;
}

.nav__link:hover {
  color: var(--color-red);
}

.nav__profile {
  margin: 0 5rem;
}

.nav-profile-text {
  font-size: 1.6rem;
  color: var(--color-red);
  font-weight: 300;
  cursor: pointer;
  transition: all 0.3s;
}

.nav-profile-text:hover {
  opacity: 0.9;
}

/* Header */
.header {
  margin-top: 9rem;
  height: 90vh;
  width: 100%;
  position: relative;
}

.header-center-text {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.header__text-box {
  width: 100%;
  height: 100%;
  position: relative;
}

.bg-video {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: -1;
  overflow: hidden;
}

.bg-video__content {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.header__title {
  font-family: 'Montserrat', sans-serif;
  font-size: 6.5rem;
  font-weight: 700;
  text-align: center;
  color: var(--color-white);
  /* margin-bottom: 1rem; */
}

.header__sub-title {
  font-size: 1.7rem;
  font-weight: 300;
  width: 60%;
  text-align: center;
  color: var(--color-white);
}

.btn-header__book {
  background-color: var(--color-white);
  margin-top: 4rem;
  padding: 0.8rem 2rem;
  text-decoration: none;
  border-radius: 3px;
  color: var(--color-primary-black);
  font-size: 1.7rem;
  font-weight: 200;
  border: 1px solid transparent;
  transition: background-color 0.6s ease, color 0.4s ease, border 0.3s ease;
}

.btn-header__book:hover {
  background-color: transparent;
  border: 1px solid #fff;
  color: #fff;
}

/* Main content */
.section {
  height: 1000px;
  text-align: center;
  margin-top: -120px;
  position: relative;
}

.trails-container-main {
  border: 1px solid green;
  width: 80%;
  height: 500px;
  margin: 0 auto;
  background-color: var(--color-secondary-black);
  display: flex;
}

.trails__image-container {
  border: 1px solid green;
  width: 35%;
  height: 100%;
}

.trails__container {
}

